--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
     <body>
         <nav>
-            <a href="#firstview"> <img src="imgs/c2logo.png" alt="Logo C2"></a>
+            <a href="#page1"> <img src="imgs/c2logo.png" alt="Logo C2"></a>
             <ul class="desktopNav">
-                <li> <a class="active" href="#page1">Home</a></li>
+                <li> <a href="#page1">Home</a></li>
                 <li> <a href="#page2">Quem Somos</a></li>
                 <li> <a href="#page3">Nossos Valores</a></li>
                 <li> <a href="#page4">Produtos</a></li>
@@ -33,6 +33,7 @@
             </ul>
             <img id="menu" src="imgs/icons/menu.svg" alt="Abrir menu">
         </nav>
+        <div class="overlay"></div>
         <div class="container-fluid" id="page1">
             <div class="row">
                 <div class="pageRow">
@@ -109,28 +110,84 @@
                 <h2><span>PRODUTOS</span></h2>
             <div class="row">
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/drywall.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/drywall.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/divisórias.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/divisórias.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/forro.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/forro.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/persiana.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/persiana.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/portas.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/portas.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/produtos/piso.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/piso.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-6 col-6">
-                    <img src="imgs/produtos/rodape.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/rodape.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-6 col-6">
-                    <img src="imgs/produtos/painelWall.png" alt="">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/produtos/painelWall.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drywall</h5>
+                            <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
+                            <a href="#" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="pageBottom">
@@ -214,15 +271,7 @@
                         <div class="form-group">
                             <input type="tel" class="form-control" name="telefone" placeholder="Telefone">
                         </div>
-                        <div class="form-group">
-                            <select class="form-control" name="selecao">
-                                <option value="#" selected disabled>Produto interessado:</option>
-                                <option value="Pinheiro">Pinheiro</option>
-                                <option value="Cedro">Cedro</option>
-                                <option value="Ipê">Ipê</option>
-                            </select>
-                        </div>
-                        <input type="submit" class="blue-button-alt float-md-right" value="Enviar">
+                        <input type="submit" class="white-btn float-md-right" value="Enviar">
                     </form>
                 </div>
             </div>
@@ -238,19 +287,12 @@
             <div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-        </footer> -->
+            <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </footer> -->
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="jquery.scrollify.js"></script>
     <script src="scripts.js"></script>
-    <script>
-        $(function() {
-            $.scrollify({
-            section : "#page1, #page2, #page3,, #page4, #page5, #page6",
-            });
-        });
-        </script>
 </html>
