--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>C2 Soluções Construtivas</title>
     <link rel="shortcut icon" href="imgs/favicon.png">
     <!-- Adicionar descrição -->
-    <meta name="description" content="">
+    <meta name="description" content="A C2 Soluções Construtivas é uma empresa especializada no ramo de licitações públicas. Atualmente, agregando aos seus serviços a distribuição de produtos para revestimentos de ambientes públicos e privados. ">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -111,97 +111,97 @@
             <div class="row justify-content-center">
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/drywall.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/drywall.png" alt="Drywall">
                         <div class="card-body">
                             <h5 class="card-title">Drywall</h5>
                             <p class="card-text"> Sendo altamente adaptáveis para qualquer tipo de obra, sejam estas reformas ou construções novas, paredes em Drywall são componentes importantes para o sucesso de qualquer construção.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/divisórias.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/divisórias.png" alt="Divisórias">
                         <div class="card-body">
                             <h5 class="card-title">Divisórias</h5>
                             <p class="card-text">Divisórias de instalação e manutenção fácil que se adaptam a qualquer projeto, as divisórias Eucatex possibilitam inúmeras combinações que se adaptam perfeitamente à necessidade de cada projeto.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/forro.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/forro.png" alt="Forros">
                         <div class="card-body">
                             <h5 class="card-title">Forros</h5>
                             <p class="card-text">As paredes em Drywall são revestidas de gesso e estrutura metálica, sendo altamente resistentes, além de oferecerem bom isolamento termal e acústico</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/persiana.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/persiana.png" alt="Persianas">
                         <div class="card-body">
                             <h5 class="card-title">Persianas</h5>
                             <p class="card-text">As persianas oferecem uma serie de vantagens e possuem uma grande opção de tipos e estilos, todas de fácil manutenção, sendo essenciais para a regularização da luminosidade do ambiente</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/portas.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/portas.png" alt="Portas">
                         <div class="card-body">
                             <h5 class="card-title">Portas</h5>
                             <p class="card-text">A porta oferece segurança, proteção contra vento, chuva e barulhos vindos do lado exterior, sendo indispensável para qualquer construção.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/piso.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/piso.png" alt="Pisos">
                         <div class="card-body">
                             <h5 class="card-title">Pisos</h5>
                             <p class="card-text">Disponíveis em Vinílicos e Laminados, eles são uma excelente opção para quem busca o isolamento acústico no ambiente e fácil limpeza</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/rodape.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/rodape.png" alt="Rodapé">
                         <div class="card-body">
                             <h5 class="card-title">Rodapés</h5>
                             <p class="card-text">Trazendo elegância e sofisticação para as contruções, rodapés são peças fundamentais para o acabamento da obra de arte que é seu lar.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/produtos/painelWall.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/produtos/painelWall.png" alt="Painel Wall">
                         <div class="card-body">
                             <h5 class="card-title">Painel Wall</h5>
                             <p class="card-text">Paineis Wall são uma ótima opção para agilizar e dar qualidade às obras. Sendo um produto acabado e de armazenagem simples, o Painel Wall é um produto indispensável para a construção de ambientes de qualidade.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Escolher</a>
+                            <a href="#form" class="btn btn-primary">Escolher</a>
                         </div>
                     </div>
                 </div>
@@ -218,35 +218,51 @@
             <h2><span>FORNECEDORES</span></h2>
             <div class="row">
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/armstrong.png" alt="">
+                    <a href="https://www.armstrongceilings.com/" target="blank">
+                        <img src="imgs/fornecedores/armstrong.png" alt="Armstrong">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/belgotex.png" alt="">
+                    <a href="https://www.belgotex.com.br/" target="blank">
+                        <img src="imgs/fornecedores/belgotex.png" alt="Belgotex">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/columbia.png" alt="">
+                    <a href="https://www.persianascolumbia.com.br/" target="blank">
+                        <img src="imgs/fornecedores/columbia.png" alt="Columbia">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/decorlit.png" alt="">
+                    <a href="http://www.decorlit.com.br/" target="blank">
+                        <img src="imgs/fornecedores/decorlit.png" alt="Decorlit">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/eucatex.png" alt="">
+                    <a href="http://www.eucatex.com.br/pt/" target="blank">
+                        <img src="imgs/fornecedores/eucatex.png" alt="Eucatex">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
-                    <img src="imgs/fornecedores/placo.png" alt="">
+                    <a href="https://www.placo.com.br/" target="blank">
+                        <img src="imgs/fornecedores/placo.png" alt="Placo">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-6 col-6">
-                    <img src="imgs/fornecedores/santa_luzia.png" alt="">
+                    <a href="https://www.santaluziamolduras.com.br/" target="blank">
+                        <img src="imgs/fornecedores/santa_luzia.png" alt="Santa Luzia">
+                    </a>
                 </div>
                 <div class="d-flex justify-content-center col-lg-3 col-md-6 col-6">
-                    <img src="imgs/fornecedores/trademixx.png" alt="">
+                    <a href="https://www.trademixx.com.br/" target="blank">
+                        <img src="imgs/fornecedores/trademixx.png" alt="Trademixx">
+                    </a>
                 </div>
             </div>
             <h2><span>ATAS</span></h2>
             <div class="row">
                 <div class="d-flex justify-content-center col-lg-3 col-md-4 col-6">
                     <div class="card">
-                        <img class="card-img-top" src="imgs/atas/ata1-thumbnail.png" alt="Card image cap">
+                        <img class="card-img-top" src="imgs/atas/ata1-thumbnail.png" alt="Ata 1">
                         <div class="card-body">
                             <h5 class="card-title">Ata de registro de preço - 2017</h5>
                         </div>
@@ -264,6 +280,7 @@
                 </a>
             </div>
         </div>
+        <footer>
         <div class="container-fluid" id="page6">
             <h2><span>CONTATO</span></h2>
             <div class="row">
@@ -275,7 +292,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.651100024015!2d-34.852424299093954!3d-7.050221171020311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acddee3822f65f%3A0x8229381205eeaea!2sC2+-+Solu%C3%A7%C3%B5es+Construtivas!5e0!3m2!1sen!2sbr!4v1563392649927!5m2!1sen!2sbr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="col-md-6">
-                    <form method="post" action="php/sendMail.php">
+                    <form method="post" action="php/sendMail.php" id="form">
                         <div class="form-group">
                             <input type="text" class="form-control" name="nome" placeholder="Nome*" required oninvalid="this.setCustomValidity('Por favor preencha o campo!')">
                         </div>
@@ -287,7 +304,7 @@
                         </div>
                         <div class="form-group">
                             <label>Produto Interessado</label>
-                            <select class="form-control">
+                            <select class="form-control" name="selecao">
                                 <option readonly>Produto: </option>
                                 <option value="Drywall">Drywall </option>
                                 <option value="Divisórias">Divisórias </option>
@@ -303,9 +320,6 @@
                     </form>
                 </div>
             </div>
-            <footer>
-            
-            </footer>
             <div class="pageBottom">
                 <a href="#page1">
                     <svg x="0px" y="0px" width="72px" height="48px" viewBox="0 0 306 306" style="enable-background:new 0 0 306 306;" xml:space="preserve">
@@ -314,11 +328,11 @@
                 </a>
             </div>
         </div>
+    </footer>
     <!-- <footer>
         <div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer> -->
     </body>
